--- a/main.html
+++ b/main.html
@@ -57,11 +57,10 @@
 			<td>
 				<table border="1" style="width: 100%; height: 100%">
 					<tr>
-						<td>Nested Table 4</td>
-						
+						<th>Nested Table 4</th>	
 					</tr>
 					<tr>
-						<td style="background-color:black; color:white;">HTML</td>
+						<th style="background-color:black; color:white;">HTML</th>
 					</tr>
 				</table>
 			</td>
